Fix some spacing

--- a/src/styles/glazes.scss
+++ b/src/styles/glazes.scss
@@ -347,10 +347,13 @@ main.aside-enabled {
     .glazes-container {
       grid-template-columns: repeat(auto-fit, minmax(170px, max-content));
 
-      button img {
-        width: 150px;
-        min-height: 150px;
+      button {
         margin: 25px 5px;
+
+        img {
+          width: 150px;
+          min-height: 150px;
+        }
       }
     }
     
@@ -360,6 +363,7 @@ main.aside-enabled {
       button.filters.enabled {
         width: 100%;
         min-width: 100%;
+        height: 65vh;
       }
 
       div.filters {
